# tennis-analysis

./: .gitignore  README.md  cli.py  config.py  main.py  pipeline.py  pyproject.toml  requirements.txt  yolo_inference.py
analytics/: __init__.py  export.py  heatmap.py  rally.py
config/: default.yaml
court_lines/: __init__.py  court_line_detect.py
models/: README.md
output_videos/: output.mov
tests/: test_ball_tracker.py  test_box_utils.py  test_conversions.py  test_rally.py
trackers/: ball_tracker.py  player_tracker.py
training/: tennis_ball_detector_train.ipynb  tennis_court_keypts_train.ipynb
utils/: __init__.py  box_utils.py  conversions.py  player_stats.py  video_utils.py
